--- a/06-web1/sobre-mi.html
+++ b/06-web1/sobre-mi.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
 
   
     <link rel="stylesheet" href="asset/fonts/fontawesome-free-6.1.2-web/css/all.min.css"/>
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="asset/css/reset.css"/>
     <link rel="stylesheet" href="asset/css/scroll.css">
     <link rel="stylesheet" href="asset/css/styles.css"/>
+    <link rel="stylesheet" href="asset/css/responsive.css"/>
     
 
     <title>Portafolio-Valentin Moreno</title>
