--- a/06-web1/index.html
+++ b/06-web1/index.html
@@ -101,6 +101,11 @@
 
             </section>
         </aside>
+        <!--menu responsive-->
+        <div class="layout__menu-toggle">
+            <i class="menut-toggle__icon fa-solid fa-bars"></i>
+            <i class="menut-toggle__icon fa-solid fa-xmark"></i>
+            </div>
         <!--contenido principal-->
         <main class="layout__content">
             <section class="content__page">
