--- a/10-web2/index.html
+++ b/10-web2/index.html
@@ -9,7 +9,7 @@
   <!--cargar estilos-->
     <link rel="stylesheet" href="asset/css/reset.css">
   <link rel="stylesheet" href="asset/css/styles.css">
-  
+  <link rel="stylesheet" href="asset/css/responsive.css">
 <!--cargarjs-->
 
     <title>Agencia desarrolo web|valentin moreno</title>
@@ -248,17 +248,17 @@
         </div>
 
             <ul class="services__service-shapes">
-                <li class="service-shapes__item service-shapes__item--shape1">
+                <li class="service-shapes__item service-shapes--shape1">
                     <div class="service-shapes__container">
                         <img class="service-shape__img" src="./asset/img/circle-2.png"/>
                     </div>
                 </li>
-                <li class="service-shapes__item service-shapes__item--shape2">
+                <li class="service-shapes__item service-shapes--shape2">
                     <div class="service-shapes__container">
                         <img class="service-shape__img" src="./asset/img/bubble-2.png"/>
                     </div>
                 </li>
-                <li class="service-shapes__item service-shapes__item--shape3">
+                <li class="service-shapes__item service-shapes--shape3">
                     <div class="service-shapes__container">
                         <img class="service-shape__img" src="./asset/img/bubble-1.png"/>
                     </div>
@@ -273,17 +273,17 @@
             <div class="projects__grid">
                 <header class="projects__header">
                     <p class="projects__subtitile">nuestro proyectos</p>
-                    <h2 class="projects_title">Alguno de nuestro<br/>mejores trabajos</h2>
+                    <h2 class="projects__title">Alguno de nuestros<br/>mejores trabajos</h2>
                 </header>
               <ul class="projects__categories">
-                <li class="categories__item">
-                    todos lo trabajos
+                <li class="categories__item categories__item--active">
+                    Todos lo trabajos
                 </li>
-                <li class="categories__item">
+                <li class="categories__item ">
                     Desrrollo web
                 </li>
-                <li class="categories__item">
-                    Desarrollo movil
+                <li class="categories__item ">
+                    Movil
                 </li>
             </ul>
 
@@ -437,17 +437,17 @@
                      <div class="stat__icon">
                         <img src="asset/img/icon-7.png" class="stat__img" >
                      </div>
-                     <span class="stat_count">+15</span>
+                     <span class="stat__count">+15</span>
 
                      <h6 class="stat__title">
-                        años activo
+                        Años activo
                      </h6>
                     </article>
                     <article class="stats__stat">
                         <div class="stat__icon">
                            <img src="asset/img/icon-8.png" class="stat__img" >
                         </div>
-                        <span class="stat_count">+200</span>
+                        <span class="stat__count">+200</span>
    
                         <h6 class="stat__title">
                            Proyectos realizados
@@ -457,17 +457,17 @@
                         <div class="stat__icon">
                            <img src="asset/img/icon-9.png" class="stat__img" >
                         </div>
-                        <span class="stat_count">+100</span>
+                        <span class="stat__count">+100</span>
    
                         <h6 class="stat__title">
-                           profesionales
+                           Profesionales
                         </h6>
                        </article>
                        <article class="stats__stat">
                         <div class="stat__icon">
                            <img src="asset/img/apple.png" class="stat__img" >
                         </div>
-                        <span class="stat_count">+550</span>
+                        <span class="stat__count">+550</span>
    
                         <h6 class="stat__title">
                            Clientes
@@ -598,7 +598,7 @@
               <h4 class="news__subtitle">Que esta pasando</h4>
               <h2 class="news__title">Ultimas noticias</h2>
               <p class="news__description">
-                Novedades sobre desarrollo web,desarrollo movil y diseño
+                Novedades sobre desarrollo web,desarrollo movil y diseño digital
             </p>
             </header>
 
@@ -610,7 +610,7 @@
                     </div>
                     <div class="new__content">
                         <h3 class="new__title">
-                            <a href="#" class="new__link">Como maquetar con Css y HTML</a>
+                            <a href="#" class="new__link">Como maquetar con CSS3 y HTML5</a>
                         </h3>
                         <p class="new__description">
                           Quieres dar tu primeros pasos en el desarrolllo web y aprender a crear webs espetaculares?
@@ -673,7 +673,7 @@
                     <a class="contact__btn" href="#">Pedir presupuesto</a>
                 </header>
                 <div class="contact__images">
-                    <div class="contact__thumb">
+                    <div class="contact__thumb contact__thumb--chat">
                         <img class="contact__img" src="./asset/img/chat-group.png"/>
                     </div>
                     <div class="contact__thumb contact__thumb--laptop ">
@@ -778,7 +778,7 @@
                          </div>                                                                                                  
                    </div>
                    <div class="footer__fright">             
-                   <div class="footer__widget">
+                   <div class="footer__widget footer__widget--50">
                     <h6 class="widget__title">Servicios</h6>
 
                     <ul class="widget__list">
@@ -803,7 +803,7 @@
 
                     </ul>
                    </div>
-                   <div class="footer__widget">
+                   <div class="footer__widget footer__widget--25">
                     <h6 class="widget__title">Recursos</h6>
 
                     <ul class="widget__list">
@@ -820,7 +820,7 @@
 
                     </ul>
                    </div>
-                   <div class="footer__widget">
+                   <div class="footer__widget footer__widget--25">
                     <h6 class="widget__title">Soporte</h6>
 
                     <ul class="widget__list">
@@ -844,7 +844,7 @@
                 <div class="footer__copyright">
                     <span class="copyright__text">
                         &copy;2024. Todos los derechos reservados <a href="https://valentinmoreno.es">
-                            valentin moreno</a>.
+                            Valentin moreno</a>.
                         </span>
                 </div>
                 <div class="footer__links">
