--- a/10-web2/index.html
+++ b/10-web2/index.html
@@ -84,7 +84,7 @@
                        <a href="#" class="menu-mobile__link">Portafolio
                            <i class="fa-solid fa-chevron-down menu-mobile__icon"></i>
                        </a>
-                       <ul class="menu-mobile__submenu">
+                       <ul class="menu-mobile__submenu-mobile">
                            <li class="submenu-mobile__item">
                                <a href="#" class="submenu-mobile__link">Diseño web</a>
                            </li>
@@ -117,7 +117,7 @@
                        <a href="#" class="menu-mobile__link">Blog
                            <i class="fa-solid fa-chevron-down menu-mobile__icon"></i>
                        </a>
-                       <ul class="menu-mobile__submenu">
+                       <ul class="menu-mobile__submenu-mobile">
                            <li class="submenu-mobile__item">
                            <a href="#" class="submenu-mobile__link">Diseño web</a>
                        </li>
